2025-02-21-14h30-TASSEDA-dyhia-readme

--- a/portfolio-backend/readme
+++ b/portfolio-backend/readme
@@ -6,3 +6,16 @@
 📂 service → Logique métier et gestion des services
 📂 exception → Gestion des exceptions globales
 📂 security → Configuration et filtres de sécurité
+## Liste des entités nécessaires
+   User ✅ (Déjà fait)
+   Experience (Expériences professionnelles)
+   Education (Formation et diplômes)
+   Skill (Compétences techniques et soft skills)
+   Project (Projets réalisés)
+   Certification (Certifications et formations complémentaires)
+   SocialLink (Liens vers les réseaux sociaux)
+   Portfolio (Informations globales du portfolio)
+   Language (Langues parlées et niveau)
+   Recommendation (Recommandations reçues)
+   Interest (Centres d’intérêt)
+
