--- a/portfolio-backend/src/main/resources/locales/ar.json
+++ b/portfolio-backend/src/main/resources/locales/ar.json
@@ -87,6 +87,8 @@
     "firstName": "الاسم الأول",
     "lastName": "الاسم الأخير",
     "phone": "الهاتف",
+    "phoneNumberPlaceholder": "أدخل رقم الهاتف (مثال: 659165303)",
+    "searchCountry": "البحث عن بلد",
     "address": "العنوان",
     "city": "المدينة",
     "country": "الدولة",
@@ -103,5 +105,45 @@
       "other": "آخر",
       "unspecified": "غير محدد"
     }
+  },
+  "profile": {
+    "title": "ملفي الشخصي",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "phone": "الهاتف",
+    "address": "العنوان",
+    "city": "المدينة",
+    "country": "الدولة",
+    "sex": "الجنس",
+    "bio": "السيرة الذاتية",
+    "edit": "تعديل ملفي الشخصي",
+    "loading": "جارٍ تحميل البيانات...",
+    "error": "خطأ: {{message}}",
+    "notFound": "المستخدم غير موجود.",
+    "unspecified": "غير مزود",
+    "noBio": "لا توجد سيرة ذاتية",
+    "sexOptions": {
+      "man": "رجل",
+      "woman": "امرأة",
+      "other": "آخر",
+      "unspecified": "غير محدد"
+    }
+  },
+  "home": {
+    "heroTitle": "أنشئ محفظتك المجانية مع PortfolioCraft",
+    "heroSubtitle": "أعطِ الحياة لمشاريعك ومهاراتك مع محفظة فريدة وبسيطة واحترافية.",
+    "startNow": "ابدأ الآن",
+    "explore": "اكتشف الأمثلة",
+    "featuresTitle": "لماذا تختار PortfolioCraft؟",
+    "feature1Title": "تخصيص سهل",
+    "feature1Desc": "خصص محفظتك باستخدام قوالب حديثة ببضع نقرات.",
+    "feature2Title": "استضافة مجانية",
+    "feature2Desc": "انشر محفظتك على الإنترنت بدون تكاليف إضافية.",
+    "feature3Title": "تصميم متجاوب",
+    "feature3Desc": "تبدو محفظتك مثالية على جميع الأجهزة.",
+    "ctaTitle": "هل أنت مستعد لعرض موهبتك للعالم؟",
+    "ctaText": "انضم إلى آلاف المبدعين وابدأ اليوم.",
+    "ctaButton": "إنشاء محفظتي",
+    "footer": "جميع الحقوق محفوظة."
   }
 }
