2025-02-23-20h06-WhaterApi-backend+backend

--- a/portfolio-backend/src/main/resources/locales/ar.json
+++ b/portfolio-backend/src/main/resources/locales/ar.json
@@ -130,11 +130,11 @@
     }
   },
   "home": {
-    "heroTitle": "أنشئ محفظتك المجانية مع PortfolioCraft",
+    "heroTitle": "أنشئ محفظتك المجانية مع Portfolio",
     "heroSubtitle": "أعطِ الحياة لمشاريعك ومهاراتك مع محفظة فريدة وبسيطة واحترافية.",
     "startNow": "ابدأ الآن",
     "explore": "اكتشف الأمثلة",
-    "featuresTitle": "لماذا تختار PortfolioCraft؟",
+    "featuresTitle": "لماذا تختار Portfolio؟",
     "feature1Title": "تخصيص سهل",
     "feature1Desc": "خصص محفظتك باستخدام قوالب حديثة ببضع نقرات.",
     "feature2Title": "استضافة مجانية",
