--- a/portfolio-backend/src/main/resources/locales/en.json
+++ b/portfolio-backend/src/main/resources/locales/en.json
@@ -130,11 +130,11 @@
     }
   },
   "home": {
-    "heroTitle": "Create Your Free Portfolio with PortfolioCraft",
+    "heroTitle": "Create Your Free Portfolio with Portfolio",
     "heroSubtitle": "Bring your projects and skills to life with a unique, simple, and professional portfolio.",
     "startNow": "Start Now",
     "explore": "Explore Examples",
-    "featuresTitle": "Why Choose PortfolioCraft?",
+    "featuresTitle": "Why Choose Portfolio?",
     "feature1Title": "Easy Customization",
     "feature1Desc": "Customize your portfolio with modern templates in just a few clicks.",
     "feature2Title": "Free Hosting",
