--- a/portfolio-backend/src/main/resources/locales/es.json
+++ b/portfolio-backend/src/main/resources/locales/es.json
@@ -131,11 +131,11 @@
     }
   },
   "home": {
-    "heroTitle": "Crea Tu Portafolio Gratis con PortfolioCraft",
+    "heroTitle": "Crea Tu Portafolio Gratis con Portfolio",
     "heroSubtitle": "Da vida a tus proyectos y habilidades con un portafolio único, simple y profesional.",
     "startNow": "Comenzar Ahora",
     "explore": "Descubrir Ejemplos",
-    "featuresTitle": "¿Por Qué Elegir PortfolioCraft?",
+    "featuresTitle": "¿Por Qué Elegir Portfolio?",
     "feature1Title": "Personalización Fácil",
     "feature1Desc": "Personaliza tu portafolio con plantillas modernas en pocos clics.",
     "feature2Title": "Alojamiento Gratis",
