--- a/portfolio-backend/src/main/resources/locales/fr.json
+++ b/portfolio-backend/src/main/resources/locales/fr.json
@@ -130,11 +130,11 @@
     }
   },
   "home": {
-    "heroTitle": "Créez Votre Portfolio Gratuit avec PortfolioCraft",
+    "heroTitle": "Créez Votre Portfolio Gratuit avec Portfolio",
     "heroSubtitle": "Donnez vie à vos projets et compétences avec un portfolio unique, simple et professionnel.",
     "startNow": "Commencer Maintenant",
     "explore": "Découvrir des Exemples",
-    "featuresTitle": "Pourquoi Choisir PortfolioCraft ?",
+    "featuresTitle": "Pourquoi Choisir Portfolio ?",
     "feature1Title": "Personnalisation Facile",
     "feature1Desc": "Personnalisez votre portfolio avec des modèles modernes en quelques clics.",
     "feature2Title": "Hébergement Gratuit",
