--- a/portfolio-backend/src/main/resources/locales/zh.json
+++ b/portfolio-backend/src/main/resources/locales/zh.json
@@ -130,11 +130,11 @@
     }
   },
   "home": {
-    "heroTitle": "用PortfolioCraft免费创建您的作品集",
+    "heroTitle": "用Portfolio免费创建您的作品集",
     "heroSubtitle": "用独特、简单且专业的作品集为您的项目和技能注入活力。",
     "startNow": "立即开始",
     "explore": "探索示例",
-    "featuresTitle": "为什么选择PortfolioCraft？",
+    "featuresTitle": "为什么选择Portfolio？",
     "feature1Title": "轻松个性化",
     "feature1Desc": "只需几次点击即可使用现代模板自定义您的作品集。",
     "feature2Title": "免费托管",
