--- a/portfolio-backend/src/main/resources/locales/en.json
+++ b/portfolio-backend/src/main/resources/locales/en.json
@@ -145,6 +145,27 @@
     "ctaText": "Join thousands of creators and get started today.",
     "ctaButton": "Create My Portfolio",
     "footer": "All rights reserved."
+  },
+  "weather": {
+    "title": "Weather",
+    "refresh": "Refresh",
+    "currentConditions": "Current Conditions",
+    "wind": "Wind",
+    "visibility": "Visibility",
+    "sun": "Sun",
+    "city": "City",
+    "temperature": "Temperature",
+    "feelsLike": "Feels Like",
+    "condition": "Condition",
+    "humidity": "Humidity",
+    "pressure": "Pressure",
+    "windSpeed": "Wind Speed",
+    "windDirection": "Wind Direction",
+    "distance": "Visibility",
+    "sunrise": "Sunrise",
+    "sunset": "Sunset",
+    "uvIndex": "UV Index",
+    "noData": "No weather data available"
   }
 
 }
