--- a/portfolio-backend/src/main/resources/locales/fr.json
+++ b/portfolio-backend/src/main/resources/locales/fr.json
@@ -5,7 +5,13 @@
     "portfolio": "Portfolio",
     "logout": "Déconnexion",
     "login": "Connexion",
-    "register": "Inscription"
+    "register": "Inscription",
+    "menu": "Menu",
+    "member": "Membre",
+    "settings": "Paramètres",
+    "rencontre": "Rencontre",
+    "offersReceived": "Offres reçues",
+    "messagesReceived": "Messages reçus"
   },
   "profile": {
     "title": "Mon Profil",
