--- a/portfolio-backend/src/main/resources/locales/ar.json
+++ b/portfolio-backend/src/main/resources/locales/ar.json
@@ -91,19 +91,33 @@
   "editProfile": {
     "title": "تعديل الملف الشخصي",
     "firstName": "الاسم الأول",
-    "lastName": "الاسم الأخير",
+    "lastName": "اسم العائلة",
     "phone": "الهاتف",
     "phoneNumberPlaceholder": "أدخل رقم الهاتف (مثال: 659165303)",
     "searchCountry": "البحث عن بلد",
     "address": "العنوان",
     "city": "المدينة",
-    "country": "الدولة",
+    "country": "البلد",
     "sex": "الجنس",
     "bio": "السيرة الذاتية",
     "submit": "حفظ",
     "backToProfile": "العودة إلى الملف الشخصي",
     "loading": "جارٍ التحميل...",
     "error": "خطأ: {{message}}",
+    "imageError": "خطأ في رفع الصورة: {{message}}",
+    "imageNSFWError": "الصورة تحتوي على محتوى غير لائق",
+    "imageAlreadyExistsError": "الصورة موجودة بالفعل",
+    "imageMaxReachedError": "تم الوصول إلى الحد الأقصى لعدد الصور (6)",
+    "imageInvalidFormatError": "تنسيق الطلب غير صالح",
+    "imageEmptyUserIdError": "معرف المستخدم فارغ",
+    "imageDirectoryError": "خطأ في إنشاء دليل المستخدم",
+    "imageCountError": "خطأ في عد صور المستخدم",
+    "imageDecodeError": "خطأ في فك تشفير الصورة",
+    "imageWriteError": "خطأ في كتابة ملف الصورة",
+    "imageNSFWCheckError": "خطأ في التحقق من المحتوى غير اللائق",
+    "imageCompressionError": "خطأ في ضغط الصورة",
+    "imageRemoveError": "خطأ في إزالة الصورة الأصلية",
+    "imageHashError": "خطأ في إضافة هاش الصورة",
     "success": "تم تحديث الملف الشخصي بنجاح",
     "sexOptions": {
       "man": "رجل",
