--- a/portfolio-backend/src/main/resources/locales/en.json
+++ b/portfolio-backend/src/main/resources/locales/en.json
@@ -104,6 +104,20 @@
     "backToProfile": "Back to profile",
     "loading": "Loading...",
     "error": "Error: {{message}}",
+    "imageError": "Error uploading image: {{message}}",
+    "imageNSFWError": "Image contains NSFW content",
+    "imageAlreadyExistsError": "Image already exists",
+    "imageMaxReachedError": "Maximum number of images reached (6)",
+    "imageInvalidFormatError": "Invalid request format",
+    "imageEmptyUserIdError": "User ID is empty",
+    "imageDirectoryError": "Error creating user directory",
+    "imageCountError": "Error counting user images",
+    "imageDecodeError": "Error decoding image",
+    "imageWriteError": "Error writing image file",
+    "imageNSFWCheckError": "Error checking NSFW content",
+    "imageCompressionError": "Error compressing image",
+    "imageRemoveError": "Error removing original image",
+    "imageHashError": "Error adding image hash",
     "success": "Profile updated successfully",
     "sexOptions": {
       "man": "Man",
