--- a/portfolio-backend/src/main/resources/locales/es.json
+++ b/portfolio-backend/src/main/resources/locales/es.json
@@ -90,11 +90,11 @@
     }
   },
   "editProfile": {
-    "title": "Editar Perfil",
+    "title": "Editar perfil",
     "firstName": "Nombre",
     "lastName": "Apellido",
     "phone": "Teléfono",
-    "phoneNumberPlaceholder": "Ingresa el número de teléfono (ej.: 659165303)",
+    "phoneNumberPlaceholder": "Introduce el número de teléfono (p. ej., 659165303)",
     "searchCountry": "Buscar país",
     "address": "Dirección",
     "city": "Ciudad",
@@ -105,6 +105,20 @@
     "backToProfile": "Volver al perfil",
     "loading": "Cargando...",
     "error": "Error: {{message}}",
+    "imageError": "Error al subir la imagen: {{message}}",
+    "imageNSFWError": "La imagen contiene contenido NSFW",
+    "imageAlreadyExistsError": "La imagen ya existe",
+    "imageMaxReachedError": "Número máximo de imágenes alcanzado (6)",
+    "imageInvalidFormatError": "Formato de solicitud inválido",
+    "imageEmptyUserIdError": "El ID de usuario está vacío",
+    "imageDirectoryError": "Error al crear el directorio del usuario",
+    "imageCountError": "Error al contar las imágenes del usuario",
+    "imageDecodeError": "Error al decodificar la imagen",
+    "imageWriteError": "Error al escribir el archivo de imagen",
+    "imageNSFWCheckError": "Error al verificar el contenido NSFW",
+    "imageCompressionError": "Error al comprimir la imagen",
+    "imageRemoveError": "Error al eliminar la imagen original",
+    "imageHashError": "Error al añadir el hash de la imagen",
     "success": "Perfil actualizado con éxito",
     "sexOptions": {
       "man": "Hombre",
