--- a/portfolio-backend/src/main/resources/locales/fr.json
+++ b/portfolio-backend/src/main/resources/locales/fr.json
@@ -89,27 +89,42 @@
     }
   },
   "editProfile": {
-    "title": "Modifier le Profil",
+    "title": "Modifier le profil",
     "firstName": "Prénom",
-    "lastName": "Nom",
-    "phoneNumberPlaceholder": "Entrez votre numéro (ex. : 659165303)",
-    "searchCountry": "Rechercher un pays",
+    "lastName": "Nom de famille",
     "phone": "Téléphone",
+    "phoneNumberPlaceholder": "Entrez le numéro de téléphone (par ex., 659165303)",
+    "searchCountry": "Rechercher un pays",
     "address": "Adresse",
     "city": "Ville",
     "country": "Pays",
     "sex": "Sexe",
-    "bio": "Bio",
+    "bio": "Biographie",
     "submit": "Enregistrer",
     "backToProfile": "Retour au profil",
     "loading": "Chargement...",
     "error": "Erreur : {{message}}",
+    "imageError": "Erreur lors du téléchargement de l'image : {{message}}",
+    "imageNSFWError": "L'image contient du contenu NSFW",
+    "imageAlreadyExistsError": "L'image existe déjà",
+    "imageMaxReachedError": "Nombre maximum d'images atteint (6)",
+    "imageInvalidFormatError": "Format de demande invalide",
+    "imageEmptyUserIdError": "L'ID utilisateur est vide",
+    "imageDirectoryError": "Erreur lors de la création du répertoire utilisateur",
+    "imageCountError": "Erreur lors du comptage des images utilisateur",
+    "imageDecodeError": "Erreur lors du décodage de l'image",
+    "imageWriteError": "Erreur lors de l'écriture du fichier image",
+    "imageNSFWCheckError": "Erreur lors de la vérification du contenu NSFW",
+    "imageCompressionError": "Erreur lors de la compression de l'image",
+    "imageRemoveError": "Erreur lors de la suppression de l'image originale",
+    "imageHashError": "Erreur lors de l'ajout du hash de l'image",
     "success": "Profil mis à jour avec succès",
+    "noChanges": "Aucun changement",
     "sexOptions": {
       "man": "Homme",
       "woman": "Femme",
       "other": "Autre",
-      "unspecified": "Ne pas préciser"
+      "unspecified": "Non spécifié"
     }
   },
   "profile": {
