--- a/portfolio-backend/src/main/resources/locales/zh.json
+++ b/portfolio-backend/src/main/resources/locales/zh.json
@@ -93,7 +93,7 @@
     "firstName": "名",
     "lastName": "姓",
     "phone": "电话",
-    "phoneNumberPlaceholder": "输入电话号码（例如：659165303）",
+    "phoneNumberPlaceholder": "输入电话号码（例如，659165303）",
     "searchCountry": "搜索国家",
     "address": "地址",
     "city": "城市",
@@ -104,6 +104,20 @@
     "backToProfile": "返回个人资料",
     "loading": "加载中...",
     "error": "错误：{{message}}",
+    "imageError": "上传图片错误：{{message}}",
+    "imageNSFWError": "图片包含不适宜内容",
+    "imageAlreadyExistsError": "图片已存在",
+    "imageMaxReachedError": "图片数量达到上限（6）",
+    "imageInvalidFormatError": "请求格式无效",
+    "imageEmptyUserIdError": "用户ID为空",
+    "imageDirectoryError": "创建用户目录时出错",
+    "imageCountError": "统计用户图片时出错",
+    "imageDecodeError": "解码图片时出错",
+    "imageWriteError": "写入图片文件时出错",
+    "imageNSFWCheckError": "检查不适宜内容时出错",
+    "imageCompressionError": "压缩图片时出错",
+    "imageRemoveError": "删除原始图片时出错",
+    "imageHashError": "添加图片哈希时出错",
     "success": "个人资料更新成功",
     "sexOptions": {
       "man": "男",
